src/unit_tests/Semantics/success/testing_self-assign.cl
class Complex {
    
};

class Main {
    a : Main <- self;
    main() : Main {
        a
    };
};