src/unit_tests/Semantics/fail/example_coolmanual_pag7.cl
class Silly 
{
    a : Silly;
    copy() : Silly {
        a
    };
};
    
class Sally inherits Silly { 

};

class Main {
    x:Sally<-(new Sally).copy();
    main() : Sally { x };
};